third_party/move/move-compiler-v2/tests/more-v1/expansion/use_inner_scope_unbound.exp

Diagnostics:
error: unbound module
   ┌─ tests/more-v1/expansion/use_inner_scope_unbound.move:13:13
   │
13 │         use 0x2::N;
   │             ^^^^^^ Invalid 'use'. Unbound module: '0x2::N'

error: unbound module member
   ┌─ tests/more-v1/expansion/use_inner_scope_unbound.move:14:21
   │
 2 │ module M {
   │        - Module '0x2::M' declared here
   ·
14 │         use 0x2::M::foo;
   │                     ^^^ Invalid 'use'. Unbound member 'foo' in module '0x2::M'
